# cvsmith

./: .gitignore  CLAUDE.md  README.md  example.yaml  example_cv.html  pyproject.toml
examples/assets/: sherlock.yaml
examples/output/: cv.html
examples/sherlock/: cv.html  sherlock.yaml
src/cvsmith/: __init__.py  cli.py  generator.py  parser.py
templates/: modern.html  modern.jinja2
