[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvsmith"
version = "0.1.0"
description = "A library to convert YAML CV data to PDF using Jinja2 templates"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Jinja2>=3.0.0",
    "PyYAML>=6.0",
    "playwright>=1.40.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
cvsmith = "cvsmith.cli:main"
